--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -1,6 +1,6 @@
-<%- include("../partials/header", { nav }) %>
+<%- include("partials/header", { nav }) %>
 
-<main class="container detail-page">
+<main id="main" class="container detail-page">
   <h1 class="page-title"><%= title %></h1>
   
   <section class="detail-wrapper">
@@ -8,4 +8,4 @@
   </section>
 </main>
 
-<%- include("../partials/footer") %>
+<%- include("partials/footer") %>
