--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,9 +1,9 @@
-<%- include("../partials/header", { nav }) %>
+<%- include("partials/header", { nav }) %>
 
-<main class="container error-page">
+<main id="main" class="container error-page">
   <h1>Error <%= status %></h1>
   <p><%= message %></p>
   <p><a href="/">Return to Home</a></p>
 </main>
 
-<%- include("../partials/footer") %>
+<%- include("partials/footer") %>
