--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -11,6 +11,7 @@
     <!-- Static links -->
     <li><a href="/finance">Financing</a></li>
     <li><a href="/service">Service</a></li>
+    <li><a href="/inv/management">Management</a></li>
   </ul>
 </nav>
 
