Changes made in inventory. js

--- a/views/inventory.ejs
+++ b/views/inventory.ejs
@@ -33,7 +33,7 @@
         %>
           <li class="vehicle-card">
             <a class="vehicle-media" href="/inv/detail/<%= v.inv_id %>">
-              <img src="<%= img %>" alt="<%= alt %>" loading="lazy" decoding="async" />
+              <img src="<%= img %>" alt="<%= alt %>" loading="lazy" decoding="async" width="400" height="300">
             </a>
 
             <div class="vehicle-info">
