--- a/views/inventory/detail.ejs
+++ b/views/inventory/detail.ejs
@@ -5,7 +5,7 @@
     <!-- Vehicle Image -->
     <figure>
       <!-- Use dynamic path for the image based on the vehicle's image name stored in the database -->
-      <img src="/images/<%= vehicle.inv_image %>" alt="Photo of <%= vehicle.inv_year %> <%= vehicle.inv_make %> <%= vehicle.inv_model %>">
+      <img src="<%= vehicle.inv_image %>" alt="Photo of <%= vehicle.inv_year %> <%= vehicle.inv_make %> <%= vehicle.inv_model %>">
     </figure>
 
     <!-- Vehicle Details -->
